<resources>
    <string name="app_name">VenezuelaEcon</string>

    <string name="in">in</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="officialtextview">DIPRO</string>
    <string name="dicomtextview">DICOM</string>
    <string name="blackmarkettextview">Black Market</string>
    <string name="M2_Restextview">M2 / Reserves</string>

    <string name="date">Date</string>
    <string name="exchange_rate">Exchange Rate</string>

    <string name="day">day</string>
    <string name="month2">month</string>
    <string name="year2">year</string>

    <string name="OPEC">OPEC</string>

    <string name="yesterday">yesterday</string>
    <string name="week">a week</string>
    <string name="month">a month</string>
    <string name="year">a year</string>
    <string name="years2">2 years</string>
    <string name="years3">3 years</string>
    <string name="years4">4 years</string>
    <string name="years5">5 years</string>
    <string name="years6">6 years</string>
    <string name="years7">7 years</string>

    <string name="foreign_exchange">Exchange Rates</string>
    <string name="foreign_reserves">Foreign Reserves</string>
    <string name="inflation">Inflation</string>
    <string name="money_supply">Money Supply</string>
    <string name="minimum_wage">Minimum Wage</string>
    <string name="oil_prices">Oil Prices</string>
    <string name="crude_production">Crude Production</string>
    <string name="us_oil">U.S. Oil</string>

    <string name="exports_to_venezuela">U.S. Exports to Venezuela</string>
    <string name="imports_from_venezuela">U.S. Imports from Venezuela</string>

    <string name="about">About</string>
    <string name="about_text">This app was created by Girish Gupta, a Caracas-based journalist. In real time, data from various sources is compiled into an online database from which your device pulls data. Notifications are fully automated and so very fast and accurate.</string>
    <string name="about2_text">Data compiled and updated live from:\n- Central Bank of Venezuela\n- Venezuela\'s Ministry of Oil and Mining\n- DolarToday\n-U.S. Energy Information Administration\n-Organization of the Petroleum Exporting Countries\n-Bitcoin Venezuela\n-Venezuela's Customs and Tax Administration\n-Ecoanalicita\n-MIT's Billion Prices project\n-Venezuela's National Assembly\n-CEDICE</string>
    <string name="button">Send comments...</string>

    <string name="barrel">barrel</string>
    <string name="barrels">barrels</string>
    <string name="barrelsper">barrels per</string>

    <string name="million">million</string>
    <string name="billion">billion</string>
    <string name="trillion">trillion</string>

    <string name="directwithopec">Direct Comm. with OPEC</string>
    <string name="secondarysources">Secondary Sources</string>
    <string name="calculator">☻ Calculator</string>
    <string name="dots">...</string>
    <string name="dollar_sign">$</string>
    <string name="bsf">BsF</string>
    <string name="about_page_paragraph1">Venezuela Econ is the data platform to help researchers, traders, analysts and anyone with an interest in the world\'s worst economy.</string>
    <string name="about_page_paragraph2">Users can witness the collapse of the currency, soaring money supply and falling wages in real time - as well as historic data going back nearly half a century.</string>
    <string name="about_page_paragraph3">The website contains even more features, such as the ability to create custom graphs, a flight tracker and social indicators such as murder rates.</string>
    <string name="website">www.venezuelaecon.com</string>
    <string name="email">info@venezuelaecon.com</string>
    <string name="version">Version %1s on Android</string>
    <string name="please_check_your_internet_connection">Please check your internet connection.</string>
    <string name="banner_ad_unit_id">ca-app-pub-7175811277195688/2193654707</string>
    <string name="ad_free">Ad free</string>
</resources>
