<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AboutFragment"
    android:background="#000000">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight="1">
    <TextView
        android:layout_width="299dp"
        android:layout_height="137dp"
        android:textColor="#FFFFFF"
        android:id="@+id/textView"
        android:gravity="fill_horizontal"
        android:layout_gravity="center_horizontal"
        android:text="@string/about_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">

    <Button
        android:text="@string/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/button" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">
        <TextView
            android:layout_width="299dp"
            android:layout_height="137dp"
            android:textColor="#FFFFFF"
            android:id="@+id/textView2"
            android:gravity="fill_horizontal"
            android:layout_gravity="center_horizontal"
            android:text="@string/about2_text" />

    </LinearLayout>
</LinearLayout>
